adjacent alignment fix!?

--- a/src/less/toggle.less
+++ b/src/less/toggle.less
@@ -3,7 +3,6 @@
   position: relative;
   width: 70px;
   height: 34px;
-//  display: inline-block;
   user-select: none;
 
   &.disabled {
@@ -41,10 +40,9 @@
   label {
     overflow: hidden;
     cursor: pointer;
-    margin: 0;
+    margin: 0 0 -12px 0;
     width: 70px;
     height: 34px;
-
   }
 
   .text {
